Cleanup part deprecation notices